--- a/style.css
+++ b/style.css
@@ -192,10 +192,12 @@ section{
 .section__text__p2{
     font-size: 1.75rem;
     margin-bottom: 0.75rem;
+    color: #1E3A8A;
 }
 .title{
     font-size: 2.5rem;
     text-align: center; 
+    color: black;
 }
 #socials-container{
     display: flex;
@@ -204,18 +206,19 @@ section{
     gap: 1rem;    
 }
 .typing {
-  overflow: hidden; 
+  display: inline-block;
+  overflow: hidden;
   white-space: nowrap;
   border-right: 3px solid #1E3A8A;
   width: 0;
-  animation: typing 6s steps(30, end) infinite, blink 0.7s infinite;
+  animation: typing 6s steps(16, end) infinite, blink 0.7s infinite;
 }
 
 @keyframes typing {
-  0%   { width: 0 }
-  40%  { width: 100% }  
-  70%  { width: 100% }   
-  100% { width: 0 }      
+  0%   { width: 0ch }
+  70%  { width: 16ch }  
+  85%  { width: 16ch }  
+  100% { width: 0ch }   
 }
 
 @keyframes blink {
